# paasify

./: .cz.toml  .envrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  Taskfile.yml  VERSION_NOTES.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: _install.yaml  _install.yml  publish_tag.yaml  python.yml  release.yml  release_dev.yaml  release_main.yaml  test.yaml
about/contribute/: index.html
about/development/: index.html
about/license/: index.html
cafram/: .gitignore  pylintrc  pyproject.toml  run_qa.sh  run_tests.sh
cafram/docs/: alt.md  api_usage.md  developpement.md  todo.md  usage.md
cafram/examples/: example1.py
cafram/features/: test_node_dict.feature
cafram/features/steps/: test_node_dict.py
cafram/jupyter/: Tutorial.ipynb
cafram/tests/: test_cafram_base.py  test_cafram_misc.py  test_cafram_regressions.py  test_cafram_utils.py
cafram/tests/test_cafram_regressions/: test_autoconf_get_children_regressions.yml  test_autoconf_get_values_regressions.yml
cafram/tests/test_cafram_utils/: test_serialize_json.yml  test_serialize_yaml.yml
docker/: Dockerfile.build
docs/: Taskfile.yml  doc_schema_md.yml  extend_plugins.md  gen_apidoc.sh  mkdocs.yml
docs/advanced/: index.html
docs/concepts/: index.html
docs/configuration/: index.html
docs/distribute/: index.html
docs/extend/: index.html
docs/src/: advanced.md  concepts.md  configuration.md  index.md  introduction.md  usage.md
jupyter/learn_101/: index.html
paasify/: __init__.py  app.py  app2.py  class_model.py  cli.py  common.py  engines.py  errors.py  framework.py  projects.py  sources.py  stack_components.py  stack_tags.py  stacks.py  stacks2.py  var_parser.py  version.py
paasify_assets/plugins/: _paasify.jsonnet  test-paasify-api.jsonnet  traefik-svc.jsonnet
refs/: index.html
refs/cli_usage/: index.html
refs/config/: paasify_prj_sources_schema.html
refs/extend_base/: index.html
refs/extend_tags/: index.html
refs/python_api_app/: index.html
refs/python_api_other/: index.html
refs/python_api_project/: index.html
refs/raw/: cli_usage.txt  paasify_app_schema.yml  paasify_prj_schema.yml
refs/schema_app/: index.html
refs/schema_prj/: index.html
refs/schema_prj_config/: index.html
refs/schema_prj_sources/: index.html
refs/schema_prj_stacks/: index.html
scripts/: Taskfile.yml  publish_github.sh  versions.sh
search/: search_index.json
tests/: test_base.py
tutorial/best_practices/: index.html
(+87 files in other folders)
