[tool.poetry]
name = "paasify"
version = "0.1.0"
description = "Paasify your docker-compose files"
authors = ["MrJK"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.8"
sh = "^1.14.2"
#jsonschema = "^4.3.3"
#jsonmerge = "^1.8.0"
anyconfig = "^0.12.0"
#python-box = "^5.4.1"
#prettytable = "^3.0.0"
#dpath = "^2.0.5"
#diskcache = "^5.4.0"
#mergedeep = "^1.3.4"
typer = "^0.4.0"
#rich = "^12.2.0"
pydantic = "^1.9.1"
jsonnet = "^0.18.0"
PyYAML = "^6.0"
lark = "^1.1.2"

[tool.poetry.dev-dependencies]
json-schema-for-humans = "^0.41.6"
#black = "^24.1.0"
pylint = "^2.12.2"
Sphinx = "^5.1.1"
myst-parser = {extras = ["linkify"], version = "^0.18.0"}
sphinx-rtd-theme = "^1.0.0"
sphinx-jsonschema = "^1.19.1"
jsonschema2rst = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
paasify2 = "paasify.cli:app"
