[tool.poetry]
name = "paasify"
version = "0.1.0"
description = "Paasify your docker-compose files"
authors = ["MrJK"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.8"
sh = "^1.14.3"
anyconfig = "^0.13.0"
typer = "^0.6.1"
pydantic = "^1.10.2"
PyYAML = "^6.0"
oschmod = "^0.3.12"
"ruamel.yaml" = "^0.17.21"
jsonschema = "^4.16.0"
semver = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
black = "^22.8.0"
pytest-regressions = "^2.4.1"
pytest-clarity = "^1.0.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
paasify2 = "paasify.cli:app"

[tool.pytest.ini_options]
log_cli = true
#log_cli_level = "DEBUG"
log_cli_level = "NOTSET"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

